--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -15,6 +15,7 @@
 
 	<ul>
 		<li><a href="recipes/spring_salad.html">Sally's Simple Spring Salad</a></li>
+		<li><a href="recipes/pineapple_souffle.html">Scalloped Pineapple Souffle</a></li>
 	</ul>
 	
 
