Create lemon_carrots page; update with orig links
Created the third recipe page for lemon-glazed carrots.

Updated all recipe pages to link back to the original recipe page on
allrecipes.com. Just click the picture.

--- a/odin-recipes/recipes/pineapple_souffle.html
+++ b/odin-recipes/recipes/pineapple_souffle.html
@@ -15,7 +15,10 @@
 
     <p></p>
 
-    <img src="pineapple_souffle_1.webp" alt="Pineapple souffle served on a plate." width="400">
+    <!-- The picture is a link to original recipe page -->
+    <a href="https://www.allrecipes.com/recipe/214025/scalloped-pineapple-souffle/" target="_blank" rel="noreferrer noopener">
+        <img src="pineapple_souffle_1.webp" alt="Pineapple souffle served on a plate." width="400">
+    </a>
 
     <p></p> <!-- Surely there's a better way to put some spaces between elements. -->
 
