--- a/odin-recipes/recipes/spring_salad.html
+++ b/odin-recipes/recipes/spring_salad.html
@@ -14,8 +14,11 @@
     <h1>Sally's Simple Spring Salad</h1>
 
     <p></p>
-
-    <img src="spring_salad.webp" alt="Sally's Simple Spring Salad on a plate" width="400">
+    
+    <!-- The picture is a link to original recipe page -->
+    <a href="https://www.allrecipes.com/recipe/240460/sandys-simple-spring-lettuce-salad/" target="_blank" rel="noreferrer noopener">
+        <img src="spring_salad.webp" alt="Sally's Simple Spring Salad on a plate" width="400">
+    </a>
 
     <p></p> <!-- Surely there's a better way to put some spaces between elements. -->
 
