Create master index; finished odin-recipes project
The Odin Recipes lesson ends with instructions on hosting the recipes
site on github. However, I've got this project under a portfolio
repository.

I've created an index.html page at the root of the repo that links to
each project. Hopefully, this will work to make all the projects
accessible.

I've also updated all recipe pages to have relative paths with proper
periods.

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -14,9 +14,9 @@
 	<p></p>
 
 	<ul>
-		<li><a href="recipes/spring_salad.html">Sally's Simple Spring Salad</a></li>
-		<li><a href="recipes/pineapple_souffle.html">Scalloped Pineapple Souffle</a></li>
-		<li><a href="recipes/lemon_carrots.html">Lemon-Glazed Carrots</a></li>
+		<li><a href="./recipes/spring_salad.html">Sally's Simple Spring Salad</a></li>
+		<li><a href="./recipes/pineapple_souffle.html">Scalloped Pineapple Souffle</a></li>
+		<li><a href="./recipes/lemon_carrots.html">Lemon-Glazed Carrots</a></li>
 	</ul>
 	
 
