--- a/odin-recipes/recipes/lemon_carrots.html
+++ b/odin-recipes/recipes/lemon_carrots.html
@@ -17,7 +17,7 @@
 
     <!-- The picture is a link to original recipe page -->
     <a href="https://www.allrecipes.com/recipe/230044/lemon-glazed-carrots/" target="_blank" rel="noreferrer noopener">
-        <img src="lemon_carrots.webp" alt="Lemon-glazed carrots on a plate." width="400">
+        <img src="./lemon_carrots.webp" alt="Lemon-glazed carrots on a plate." width="400">
     </a>
 
     <p></p> <!-- Surely there's a better way to put some spaces between elements. -->
