Complete css foundations exercises, update index
Completed the six "foundations" CSS exercises.

Created an index file that leads to each exercise from the css-exercises
root folder. The master (main) index file links to this root index file.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<li><a href="./html-boilerplate/index.html" target="_blank" rel="noopener noreferrer">html-boilerplate</a></li>
 		<li><a href="./odin-links-and-images/index.html" target="_blank" rel="noopener noreferrer">odin-links-and-images</a></li>
 		<li><a href="./odin-recipes/index.html" target="_blank" rel="noopener noreferrer">odin-recipes</a></li>
+		<li><a href="./css-exercises/index.html">css-exercises</a>, foundations</li>
 	</ol>
 
 </body>
