--- a/odin-recipes/recipes/spring_salad.html
+++ b/odin-recipes/recipes/spring_salad.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spring Salad | Odin Recipes</title>
+
+	<link rel="stylesheet" href="../styles.css">
+
 </head>
 
 <body>
