Complete margin-and-padding in css-exercises

--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -26,6 +26,13 @@
         <li><a href="./foundations/06-cascade-fix/index.html" target="_blank" rel="noopener noreferrer">06-cascade-fix</a></li>
     </ul>
 
+    <h2>"Margin-and-padding" exercises</h2>
+
+    <ul>
+        <li><a href="./margin-and-padding/01-margin-and-padding-1/index.html" target="_blank" rel="noopener noreferrer">01-margin-and-padding-1</a></li>
+        <li><a href="./margin-and-padding/02-margin-and-padding-2/index.html" target="_blank" rel="noopener noreferrer">02-margin-and-padding-2</a></li>
+    </ul>
+
 </body>
 
 </html>
