Update odin-recipes with margin-and-padding lesson

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -12,15 +12,24 @@
 
 <body>
 
-	<h1>Odin Recipes</h1>
+	<div class="photo">
+		<img src="./odin.png" alt="TOP's Odin" width="400px">
+	</div>
 
-	<p></p>
+	<div class="title">
+		<h1>Odin Recipes</h1>
+	</div>
 
-	<ul>
-		<li><a href="./recipes/spring_salad.html">Sally's Simple Spring Salad</a></li>
-		<li><a href="./recipes/pineapple_souffle.html">Scalloped Pineapple Souffle</a></li>
-		<li><a href="./recipes/lemon_carrots.html">Lemon-Glazed Carrots</a></li>
-	</ul>
+	<div class="recipe_list">
+		<ul>
+			<li><a href="./recipes/spring_salad.html">Sally's Simple Spring Salad</a> 
+				<img src="./recipes/spring_salad.webp" width="40px"></li>
+			<li><a href="./recipes/pineapple_souffle.html">Scalloped Pineapple Souffle</a> 
+				<img src="./recipes/pineapple_souffle_1.webp" width="40px"></li>
+			<li><a href="./recipes/lemon_carrots.html">Lemon-Glazed Carrots</a> 
+				<img src="./recipes/lemon_carrots.webp" width="40px"></li>
+		</ul>
+	</div>
 	
 
 </body>
