--- a/odin-recipes/recipes/pineapple_souffle.html
+++ b/odin-recipes/recipes/pineapple_souffle.html
@@ -12,50 +12,64 @@
 
 <body>
 
-    <a href="../index.html">Home</a>
+    <div class="nav">
+        <a href="../index.html">Home</a>
+    </div>
 
-    <h1>Scalloped Pineapple Souffle</h1>
-
-    <p></p>
+    <div class="title">
+        <h1>Scalloped Pineapple Souffle</h1>
+    </div>
 
     <!-- The picture is a link to original recipe page -->
-    <a href="https://www.allrecipes.com/recipe/214025/scalloped-pineapple-souffle/" target="_blank" rel="noreferrer noopener">
-        <img src="./pineapple_souffle_1.webp" alt="Pineapple souffle served on a plate." width="400">
-    </a>
+    <div class="photo">
+        <a href="https://www.allrecipes.com/recipe/214025/scalloped-pineapple-souffle/" target="_blank" rel="noreferrer noopener">
+            <img src="./pineapple_souffle_1.webp" alt="Pineapple souffle served on a plate." width="400">
+        </a>
+    </div>
 
-    <p></p> <!-- Surely there's a better way to put some spaces between elements. -->
+    <div class="description">
+        <p>This is a wonderful pineapple dish to be served with ham. It is 
+            a favorite at Easter in my family. The egg whites add a touch 
+            of lightness to it.</p>
 
-    <p>This is a wonderful pineapple dish to be served with ham. It is <br>
-        a favorite at Easter in my family. The egg whites add a touch <br>
-        of lightness to it.</p>
+        <p>Total Time: 50 min | Servings: 12</p>
+    </div>
 
-    <p>Total Time: 50 min | Servings: 12</p>
+    <div class="ingredients">
+        <h2>Ingredients</h2>
+        
+        <ul>
+            <li>3 eggs, whites and yolks separated</li>
+            <li>1 ½ cups white sugar</li>
+            <li>½ cup butter</li>
+            <li>½ cup milk</li>
+            <li>1 (15 ounce) can crushed pineapple, drained</li>
+            <li>3 cups cubed bread</li>
+        </ul>
+    </div>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>3 eggs, whites and yolks separated</li>
-        <li>1 ½ cups white sugar</li>
-        <li>½ cup butter</li>
-        <li>½ cup milk</li>
-        <li>1 (15 ounce) can crushed pineapple, drained</li>
-        <li>3 cups cubed bread</li>
-    </ul>
+    <div class="directions">
+        <h2>Directions</h2>
+        
+        <ol>
+            <li>Preheat an oven to 350 degrees F (175 C). </li>
+            <li>Beat egg whites until foamy in a large glass or metal 
+                mixing bowl until stiff peaks form. Lift your beater or 
+                whisk straight up: the egg whites should form a sharp 
+                peak that holds its shape. </li>
+            <li>Beat the egg yolks, sugar, butter, and milk together in 
+                a large bowl. Stir in the pineapple and bread. Lightly 
+                fold egg whites into the pineapple mixture, then spread 
+                the mixture into a large baking dish. </li>
+            <li>Bake in the preheated oven until golden brown, 35 to 45 minutes. </li>
+        </ol>
+    </div>
 
-    <h2>Directions</h2>
-    <ol>
-        <li>Preheat an oven to 350 degrees F (175 degrees C). </li>
-        <li>Beat egg whites until foamy in a large glass or metal <br>
-            mixing bowl until stiff peaks form. Lift your beater or <br>
-            whisk straight up: the egg whites should form a sharp <br>
-            peak that holds its shape. </li>
-        <li>Beat the egg yolks, sugar, butter, and milk together in <br>
-            a large bowl. Stir in the pineapple and bread. Lightly <br>
-            fold egg whites into the pineapple mixture, then spread <br>
-            the mixture into a large baking dish. </li>
-        <li>Bake in the preheated oven until golden brown, 35 to 45 minutes. </li>
-    </ol>
+    <div class="photo">
+        <img src="pineapple_souffle_2.webp" alt="Closeup of pineapple souffle." width="400">
+    </div>
 
-    <img src="pineapple_souffle_2.webp" alt="Closeup of pineapple souffle." width="400">
+    <footer></footer>
 
 </body>
 
