--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<li><a href="./odin-links-and-images/index.html" target="_blank" rel="noopener noreferrer">odin-links-and-images</a></li>
 		<li><a href="./odin-recipes/index.html" target="_blank" rel="noopener noreferrer">odin-recipes</a></li>
 		<li><a href="./css-exercises/index.html">css-exercises</a>, foundations</li>
+		<li><a href="./css-exercises/index.html">css-exercises</a>, margin-and-padding</li>
 	</ol>
 
 </body>
