--- a/odin-recipes/recipes/lemon_carrots.html
+++ b/odin-recipes/recipes/lemon_carrots.html
@@ -12,42 +12,54 @@
 
 <body>
 
-    <a href="../index.html">Home</a>
+    <div class="nav">
+        <a href="../index.html">Home</a>
+    </div>
 
-    <h1>Lemon-Glazed Carrots</h1>
-
-    <p></p>
+    <div class="title">
+        <h1>Lemon-Glazed Carrots</h1>
+    </div>
 
     <!-- The picture is a link to original recipe page -->
-    <a href="https://www.allrecipes.com/recipe/230044/lemon-glazed-carrots/" target="_blank" rel="noreferrer noopener">
-        <img src="./lemon_carrots.webp" alt="Lemon-glazed carrots on a plate." width="400">
-    </a>
+    <div class="photo">
+        <a href="https://www.allrecipes.com/recipe/230044/lemon-glazed-carrots/" target="_blank" rel="noreferrer noopener">
+            <img src="./lemon_carrots.webp" alt="Lemon-glazed carrots on a plate." width="400">
+        </a>
+    </div>
 
-    <p></p> <!-- Surely there's a better way to put some spaces between elements. -->
+    <div class="description">
+        <p>Very easy and quick to make!</p>
 
-    <p>Very easy and quick to make!</p>
+        <p>Total Time: 20 min | Servings: 2</p>
+    </div>
 
-    <p>Total Time: 20 min | Servings: 2</p>
+    <div class="ingredients">
+        <h2>Ingredients</h2>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 carrots, sliced 1/4-inch thick</li>
-        <li>1 tablespoon butter</li>
-        <li>1 tablespoon brown sugar</li>
-        <li>1 teaspoon lemon juice</li>
-        <li>1 pinch salt and ground black pepper to taste</li>
-    </ul>
+        <ul>
+            <li>2 carrots, sliced 1/4-inch thick</li>
+            <li>1 tablespoon butter</li>
+            <li>1 tablespoon brown sugar</li>
+            <li>1 teaspoon lemon juice</li>
+            <li>1 pinch salt and ground black pepper to taste</li>
+        </ul>
+    </div>
 
-    <h2>Directions</h2>
-    <ol>
-        <li>Place carrots into a large pot and cover with water; <br>
-            bring to a boil. Reduce heat to medium-low and simmer <br>
-            until carrots are tender, about 8 minutes. Drain. </li>
-        <li>Heat butter in a skillet over medium heat; cook and <br>
-            stir carrots, brown sugar, and lemon juice in the <br>
-            melted butter, stirring often, until sugar has <br>
-            dissolved, 2 minutes. </li>
-    </ol>
+    <div class="directions">
+        <h2>Directions</h2>
+
+        <ol>
+            <li>Place carrots into a large pot and cover with water; 
+                bring to a boil. Reduce heat to medium-low and simmer 
+                until carrots are tender, about 8 minutes. Drain. </li>
+            <li>Heat butter in a skillet over medium heat; cook and 
+                stir carrots, brown sugar, and lemon juice in the 
+                melted butter, stirring often, until sugar has 
+                dissolved, 2 minutes. </li>
+        </ol>
+    </div>
+
+    <footer></footer>
 
 </body>
 
