--- a/css-exercises/flex/03-flex-header-2/index.html
+++ b/css-exercises/flex/03-flex-header-2/index.html
@@ -8,19 +8,27 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
     <div class="header">
-      <div class="logo">
-        LOGO
+
+      <div class="left-content">
+        <div class="logo">
+          LOGO
+        </div>
+        <ul class="links">
+          <li><a href="https://google.com">link-one</a></li>
+          <li><a href="https://google.com">link-two</a></li>
+          <li><a href="https://google.com">link-three</a></li>
+        </ul>
       </div>
-      <ul class="links">
-        <li><a href="https://google.com">link-one</a></li>
-        <li><a href="https://google.com">link-two</a></li>
-        <li><a href="https://google.com">link-three</a></li>
-      </ul>
-      <button class="notifications">
-        1 new notification
-      </button>
-      <div class="profile-image"></div>
+      
+      <div class="right-content">
+        <button class="notifications">
+          1 new notification
+        </button>
+        <div class="profile-image"></div>
+      </div>
+
     </div>
   </body>
 </html>
