--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -37,6 +37,18 @@
 
     <p>Elements learned in this section were also applied to "odin-recipes".</p>
 
+    <h2>"Flex" exercises</h2>
+
+    <ul>
+        <li><a href="./flex/01-flex-center/index.html" target="_blank" rel="noopener noreferrer">01-flex-center</a></li>
+        <li><a href="./flex/02-flex-header/index.html" target="_blank" rel="noopener noreferrer">02-flex-header</a></li>
+        <li><a href="./flex/03-flex-header-2/index.html" target="_blank" rel="noopener noreferrer">03-flex-header-2</a></li>
+        <li><a href="./flex/04-flex-information/index.html" target="_blank" rel="noopener noreferrer">04-flex-information</a></li>
+        <li><a href="./flex/05-flex-modal/index.html" target="_blank" rel="noopener noreferrer">05-flex-modal</a></li>
+        <li><a href="./flex/06-flex-layout/index.html" target="_blank" rel="noopener noreferrer">06-flex-layout</a></li>
+        <li><a href="./flex/07-flex-layout-2/index.html" target="_blank" rel="noopener noreferrer">07-flex-layout-2</a></li>
+    </ul>
+
 </body>
 
 </html>
