Start landing_page project

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<li><a href="./odin-recipes/index.html" target="_blank" rel="noopener noreferrer">odin-recipes</a></li>
 		<li><a href="./css-exercises/index.html">css-exercises</a>, foundations</li>
 		<li><a href="./css-exercises/index.html">css-exercises</a>, margin-and-padding</li>
+		<li><a href="./css-exercises/index.html">css-exercises</a>, flex</li>
+		<li><a href="./landing_page/index.html" target="_blank" rel="noopener noreferrer">landing_page</a></li>
 	</ol>
 
 </body>
