--- a/index.html
+++ b/index.html
@@ -25,6 +25,30 @@
 		<li><a href="./landing_page/index.html" target="_blank" rel="noopener noreferrer">landing_page</a></li>
 	</ol>
 
+
+	<!-- for "foundations-variables-and-operators" -->
+	<script>
+
+		console.log("Hello world!")
+
+		console.log(23 + 97)
+		console.log(1 + 2 + 3 + 4 + 5 + 6)
+		console.log((4 + 6 + 9) / 77)
+
+		let a = 10
+		console.log(a)
+		console.log(9 * a)
+
+		let b = 7 * a
+		console.log(b)
+
+		const MAX = 57
+		let actual = MAX - 13
+		let percentage = actual / MAX
+		console.log(percentage)
+
+	</script>
+
 </body>
 
 </html>
