Complete foundations-function-basics

--- a/index.html
+++ b/index.html
@@ -49,6 +49,31 @@
 
 	</script>
 
+	<!-- for "foundations-functions-basics" -->
+	<script>
+
+		function add7(number) {
+			return number + 7
+		}
+		console.log(add7(42))
+
+		function multiply(num1, num2) {
+			return num1 * num2
+		}
+		console.log(multiply(11, 2))
+
+		function capitalize(word) {
+			return word.charAt(0).toUpperCase() + word.slice(1).toLowerCase()
+		}
+		console.log(capitalize("heLLo"))
+
+		function lastLetter(wword) {
+			return wword.charAt(wword.length - 1)
+		}
+		console.log(lastLetter("World"))
+
+	</script>
+
 </body>
 
 </html>
