Complete Rock Paper Scissors Project

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<li><a href="./css-exercises/index.html">css-exercises</a>, flex</li>
 		<li><a href="./landing_page/index.html" target="_blank" rel="noopener noreferrer">landing_page</a></li>
 		<li><a href="./number-game-errors/number-game-errors.html" target="_blank" rel="noopener noreferrer">number-game-errors</a></li>
+		<li><a href="./rock_paper_scissors/index.html" target="_blank" rel="noopener noreferrer">Rock Paper Scissors</a></li>
 	</ol>
 
 
