Complete dom-manipulation-and-events lesson

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		<li><a href="./landing_page/index.html" target="_blank" rel="noopener noreferrer">landing_page</a></li>
 		<li><a href="./number-game-errors/number-game-errors.html" target="_blank" rel="noopener noreferrer">number-game-errors</a></li>
 		<li><a href="./rock_paper_scissors/index.html" target="_blank" rel="noopener noreferrer">Rock Paper Scissors</a></li>
+		<li>javascript-exercises</li>
+		<li><a href="./dom-manipulation-and-events/index.html" target="_blank" rel="noopener noreferrer">dom-manipulation-and-events</a></li>
 	</ol>
 
 
