Start rock_paper_scissors_ui project
Currently stuck on the reset button only working once per page load.
This is keeping me from fixing other issues, such as:
- round number not updating
- divs not updating properly

Besides the above issues, I still need to code in what happens when five
rounds have been completed and how the match result is "celebrated".

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<li><a href="./rock_paper_scissors/index.html" target="_blank" rel="noopener noreferrer">Rock Paper Scissors</a></li>
 		<li>javascript-exercises</li>
 		<li><a href="./dom-manipulation-and-events/index.html" target="_blank" rel="noopener noreferrer">dom-manipulation-and-events</a></li>
+		<li><a href="./rock_paper_scissors_ui/index.html" target="_blank" rel="noopener noreferrer">Rock Paper Scissors UI</a></li>
 	</ol>
 
 
