--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div id="header" class="board">
+<div id="header">
     <div id="headline">Etch A Sketch</div>
     <div class="title">Hold click to draw.</div>
 </div>
@@ -20,15 +20,10 @@
 
 <div id="settings" class="board">
     <div id="buttonPanel" class="panel">
-        <button id="color" class="setting">Color</button>
         <button id="rainbow" class="setting">Rainbow</button>
-        <button id="erase" class="setting">Eraser</button>
-        <button id="reset" class="setting">Reset</button>
-    </div>
-
-    <div id="sliderPanel" class="panel">
         <input type="range" min="1" max="80" value="16" class="slider" id="sizeSlider">
         <div id="sizeReadout">0</div>
+        <button id="reset" class="setting">Reset</button>
     </div>
 </div>
 
