Start calculator project

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<li><a href="./dom-manipulation-and-events/index.html" target="_blank" rel="noopener noreferrer">dom-manipulation-and-events</a></li>
 		<li><a href="./rock_paper_scissors_ui/index.html" target="_blank" rel="noopener noreferrer">Rock Paper Scissors UI</a></li>
 		<li><a href="./etch-a-sketch/index.html" target="_blank" rel="noopener noreferrer">Etch-a-Sketch</a></li>
+		<li><a href="./calculator/index.html" target="_blank" rel="noopener noreferrer">Calculator</a></li>
 	</ol>
 
 
